# oliver-codegen

./: .gitignore  README.md  main.spec  pyproject.toml
codegen/: main.py
codegen/conf/: pyproject.toml
codegen/conf/create/: create.yaml
codegen/core/: log.py
codegen/util/: error.py  file_folder_util.py
oliver_codegen/: main.py
oliver_codegen/conf/: pyproject.toml
oliver_codegen/conf/add/: .prettierrc
oliver_codegen/conf/create/: create.yaml
oliver_codegen/core/: log.py  params.py
oliver_codegen/service/: argsparse.py
oliver_codegen/templates/create/: create.yaml
oliver_codegen/util/: error.py  file_folder_util.py
scripts/: sync.py
src/: main.py
src/service/: argsparse.py
tests/: pyproject.toml  test_argsparse.py  test_params.py  test_remove.py
tests/test_core/: test_params.py
