[tool.poetry]
name = "codegen"
version = "0.1.0"
description = "项目代码框架快速生成脚手架"
authors = ["oliver <lifefossil@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"

[tool.pytest.ini_options]
pythonpath = "."
addopts = ["-v", "-s", "--import-mode=importlib"]

# 日志配置
[logging]
enable_file_log = false
file_log_location = "."

#[project]
#debug = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
