[tool.poetry]
version = "fff"
description = "ddd"
name = "test2"
readme = "README.md"
packages = [
    {include = "kkk"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"


[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"


[tool.pytest.ini_options]
pythonpath = "."
addopts = ["-v", "-s", "--import-mode=importlib"]
name = "hello"